<resources>
    <string name="app_name">VirtualGuide</string>
    <string name="title_activity_login_user">LoginUser</string>
    <!-- Strings used for fragments for navigation -->
    <!-- Login and Register -->
    <string name="login">Ingresar</string>
    <string name="password">Contraseña</string>
    <string name="e_mail">Email</string>
    <string name="tag">Únetenos y \nconstruye tus propios marcadores!</string>
    <string name="swipe_right_for_login">Desliza a la izquierda para Logearte</string>
    <string name="register">Registrar</string>
    <string name="re_type_password">Reescribir Contraseña</string>
    <string name="your_name">Nombre Completo</string>
    <string name="SentToLogin">Ya tengo una cuenta</string>
    <string name="SentToRegister">Registrar Usuario</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_nav_draw">NavDraw</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Perfil</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Lista de Marcadores</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Acerca de</string>
    <string name="menu_send">Cerrar Sesion</string>
    <string name="menu_map">Mapa</string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>
    <!-- Transition type strings -->
    <string name="geofence_transition_entered">Acabas de ingresar a</string>
    <string name="geofence_transition_exited">Acabas de salir de</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>

    <string name="geofence_transition_notification_text">
        Click notification to return to app
    </string>
    <string name="insufficient_permissions">Insufficient permissions.</string>

    <string name="tomar_foto">Tomar foto</string>
</resources>