<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.LoginUser">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_password"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/btn_custom"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/login"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn_sendToRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_login"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/btn_custom"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@android:color/white"
            android:text="@string/SentToRegister"/>

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_above="@id/et_password"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/et_custom"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/et_email"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="50dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/tag"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/tv_subtitle"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/indigo_daisy"
            android:text="@string/app_name"
            android:textSize="50sp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/et_custom"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textSize="15sp" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>