<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.RegisterUser">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/cardview_dark_background">
        <TextView
            android:id="@+id/tv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textAlignment="center"
            android:textSize="50sp"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/indigo_daisy"
            android:layout_marginTop="60dp"
            android:textColor="#ff6600"/>

        <TextView
            android:id="@+id/tv_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tag"
            android:textSize="17sp"
            android:fontFamily="@font/roboto_regular"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="50dp"
            android:textColor="@android:color/white"/>

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/your_name"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:padding="15dp"
            android:inputType="textPersonName"
            android:fontFamily="@font/roboto_regular"
            android:background="@drawable/et_custom"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/e_mail"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:padding="15dp"
            android:fontFamily="@font/roboto_regular"
            android:inputType="textEmailAddress"
            android:background="@drawable/et_custom"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:padding="15dp"
            android:fontFamily="@font/roboto_regular"
            android:inputType="textPassword"
            android:background="@drawable/et_custom"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_repassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/re_type_password"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="15dp"
            android:fontFamily="@font/roboto_regular"
            android:inputType="textPassword"
            android:background="@drawable/et_custom"
            android:textSize="15sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_custom"
                android:fontFamily="@font/roboto_regular"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/white"
                android:text="@string/register"/>

            <Button
                android:id="@+id/btn_sendToLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_custom"
                android:fontFamily="@font/roboto_regular"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:layout_below="@id/btn_register"
                android:textColor="@android:color/white"
                android:text="@string/SentToLogin"/>

        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>